pagina princiapl finalizada

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <h3>Total</h3>
             <span class="totalPriceCart">$2040</span>
           </div>
-          <button class="cart-btn-add">Eliminar Pedido</button>
-          <button class="cart-btn-add">Realizar Pedido</button>
+          <button class="cart-btn-add cleanCart">Eliminar Pedido</button>
+          <button class="cart-btn-add buyCart">Realizar Pedido</button>
         </div>
         <!-- ☰ Menu Hamburguesa ☰ -->
         <label for="menu-toggle" class="menu-h">☰</label>
