add: login y register

--- a/assets/Pages/login.html
+++ b/assets/Pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Ritual Experiencias - Login</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/login_reg.css" />
   </head>
@@ -21,7 +21,7 @@
     <!-- INICIO DE SECCION HERO -->
     <section id="hero">
       <div class="h-info">
-        <form class="formContainer">
+        <form class="formContainer loginForm">
           <h1 class="formTitle">Iniciá Sesión</h1>
           <!-- Email -->
           <div class="formField">
@@ -38,7 +38,7 @@
               type="password"
               placeholder="Password"
               class="formInput"
-              id="password"
+              id="pass"
               autocomplete="off" />
           </div>
           <!-- Mesaje de Error -->
@@ -68,5 +68,6 @@
       </div>
       <p>Ritual Experiencias</p>
     </footer>
+    <script src="../JS/login.js"></script>
   </body>
 </html>
