--- a/assets/Pages/register.html
+++ b/assets/Pages/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Ritual Experiencias - Registro</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/login_reg.css" />
   </head>
@@ -21,7 +21,7 @@
     <!-- INICIO DE SECCION HERO -->
     <section id="hero">
       <div class="h-info">
-        <form class="formContainer">
+        <form class="formContainer registerFrom">
           <h1 class="formTitle">Hacete Cliente</h1>
           <!-- Nombre -->
           <div class="formField">
@@ -50,8 +50,7 @@
               placeholder="Email"
               class="formInput"
               id="email"
-              autocomplete="off"
-              required />
+              autocomplete="off" />
             <small></small>
           </div>
           <!-- Password -->
@@ -99,5 +98,6 @@
       </div>
       <p>Ritual Experiencias</p>
     </footer>
+    <script src="../JS/register.js"></script>
   </body>
 </html>
